    * 4192 FIX: df: Fixed handling of incomplete information about inodes...
    * 4359 FIX: mssql_counters: ignore invalid lines

    Multisite:
    * 4365 FIX: Service availability: Host down could not be rewritten to other states like CRIT
    * 4371 FIX: Dashboards: Folder filtered globe dashlets now link to filtered views


1.2.8p17:
    Checks & Agents:
    * 4283 FIX: check_mail_loop: Now using "mail to" address in To header
    * 4297 FIX: oracle_instance: fixed discovery function...
    * 4298 FIX: omd_apache: fixed missing data handling
    * 4299 FIX: df: fixed missing filesystem type handling
    * 4300 FIX: job: fixed missing information handling
    * 4301 FIX: winperf_tcp_conn: fixed missing data handling
    * 4302 FIX: win_wmi_software: fixed invalid data handling
    * 4213 FIX: fjdarye101_syscaps: Fix failing check when using Nagios core
    * 4303 FIX: sap_state: fixed error handling
    * 4214 FIX: jolokia_metrics.tp: Fix crash in case of partial thread information...
    * 4304 FIX: mk_inventory.linux: fixed missing redirection to null device in if statement
    * 4305 FIX: postgres_stat_database.size: fixed missing database size perfometer
    * 4333 FIX: tsm_storage_pools: fixed incomplete data handling
    * 4343 FIX: apt: Fixed wrong state information of pending updates of normal and security updates...
    * 4344 FIX: lnx_quota: Fixed wrong value calculation and removed performance data...
            NOTE: Please refer to the migration notes!
    * 4191 FIX: esx_vsphere_hostsystem.cpu_usage: Fixed wrong total GHz...
    * 4340 FIX: blade_bays: cleanup and some improvements...
    * 4341 FIX: cisco_wlc: fixed invalid parameters during service discovery
    * 4342 FIX: hp_proliant: fixed empty status handling
    * 4345 FIX: hp_proliant_temp: Ignore device levels of 0
    * 4355 FIX: ipmi: added missing case: ignore sensor status 'ns'