@@ -1,0 +1,10 @@
+Title: Timeperiods: iCal events with multiple days can now be imported
+Level: 1
+Component: wato
+Class: fix
+Compatible: compat
+State: unknown
+Version: 1.2.8p18
+Date: 1487317705
+
+
