@@ -9,6 +9,9 @@
     * 4365 FIX: Service availability: Host down could not be rewritten to other states like CRIT
     * 4371 FIX: Dashboards: Folder filtered globe dashlets now link to filtered views
 
+    WATO:
+    * 4373 FIX: Timeperiods: iCal events with multiple days can now be imported
+
 
 1.2.8p17:
     Checks & Agents:
